# fastappi_ads_app

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2026-05-04_37e8df3f5102_initial_migration.py
src/: main.py  scripts.py
src/api/routes/: advertisements.py  auth.py  users.py
src/core/: config.py  database.py  security.py
src/dependencies/: advertisement.py  auth.py  database.py  user.py
src/models/: __init__.py  advertisement.py  base.py  mixins.py  relations.py  right.py  role.py  user.py
src/repositories/: advertisement.py  token.py  user.py
src/schemas/: advertisement.py  auth.py  user.py
src/services/: advertisement.py  auth.py  role.py  user.py
